# cas2

./: .travis.yml  AUTHOR  CMakeLists.txt  INSTALL  README  SimplifyTerm.cpp  SimplifyTerm.h  TODO  cas2.kdev4  doxygenconfig  exp.cpp  exp.h  expandrule.cpp  expandrule.h  functionchange.cpp  functionchange.h  functiondefinition.cpp  functiondefinition.h  hash.h  hashes.h  main.cpp  number.cpp  number.h  operator.cpp  operator.h  relations.cpp  relations.h  rule.cpp  rule.h  simplifyrulecollection.h  term.cpp  term.h  term_templates.cpp  termcache.h  termcollection.cpp  termcollection.h  termreference.cpp  termreference.h  transform.cpp  transform.h  (+3 more)
Parser/: CMakeLists.txt  Lexer.h  Parser.cpp  Parser.h  grammar.tab.cpp  grammar.tab.hpp  grammar.y  header.h  parser.cpp  parser.h  words.lex  words.lex.cpp
Regeln/: CMakeLists.txt  Diff  Exp  Expand  Logic  Set  Solve  _EXT  expand  functions  rules  types
RuleParser/: CMakeLists.txt  Lexer.h  Parser.cpp  Parser.h  Parser.ih  RuleParser.kdev4  TODO  errors.cpp  errors.h  expression.cpp  expression.h  grammar.y  header.h  introsection.cpp  introsection.h  lexer.lex  main.cpp  rules
cmake_modules/: FindGMP.cmake
dlfcn-win32/include/: dlfcn.h
kern/: CMakeLists.txt  Constants.cpp  Constants.h  SimplifyTerm.cpp  SimplifyTerm.h  abstractcreateclass.cpp  abstractcreateclass.h  createclasscollection.cpp  createclasscollection.h  error.cpp  error.h  exp.cpp  exp.h  expandrule.cpp  expandrule.h  functionchange.cpp  functionchange.h  functiondefinition.cpp  functiondefinition.h  hash.cpp  hash.h  hashes.h  number.cpp  number.h  operator.cpp  operator.h  relations.cpp  relations.h  rule.cpp  rule.h  simplifyrulecollection.cpp  simplifyrulecollection.h  subrule.cpp  subrule.h  table.cpp  table.h  term.cpp  term.h  term_templates.cpp  termcache.cpp  (+12 more)
kern/GenerateHashes/: CMakeLists.txt  hashList  main.cpp
runner/: CMakeLists.txt  runner.cpp  runner.desktop  runner.h  runner.kdev4
